--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: ci
 
-on: [push]
+on:
+  push:
+    paths-ignore:
+      - '*.md'
 
 jobs:
   build_and_test:
@@ -20,6 +23,7 @@ jobs:
       - name: build
         run: npm run build
       - name: test
-        run: npm run test -- --ci
+        run: npm run test -- --ci --coverage
         env:
           CI: true
+      - uses: codecov/codecov-action@v1
