--- a/package.json
+++ b/package.json
@@ -20,29 +20,31 @@
   "private": false,
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage",
-    "prebuild": "rm -rf ./dist",
+    "test": "jest",
+    "test:cov": "jest --coverage",
+    "prebuild": "rimraf ./dist",
     "build": "tsc",
-    "postbuild": "cp ./package.json ./dist",
+    "postbuild": "cpy ./package.json ./dist",
     "lint": "eslint --ext .ts ./src/** ./tests/**"
   },
   "devDependencies": {
     "@types/common-tags": "^1.8.0",
-    "@types/eslint": "^4.16.6",
-    "@types/jest": "^24.0.16",
-    "@types/node": "^12.6.9",
+    "@types/eslint": "^4.16.8",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.42",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "common-tags": "^1.8.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "husky": "^3.0.2",
-    "jest": "^24.8.0",
-    "lint-staged": "^9.2.1",
-    "prettier": "^1.18.2",
-    "semantic-release": "^15.13.19",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.5.3"
+    "cpy-cli": "^3.1.1",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^3.1.0",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.0.0",
+    "typescript": "^3.9.3"
   }
 }
