--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.0.0",
+    "tsutils-etc": "^1.2.2",
     "typescript": "^3.9.3"
   }
 }
