chore: add documentation add general doc in README.md add migration doc add README.md to package.json

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test:cov": "jest --coverage",
     "prebuild": "rimraf ./dist",
     "build": "tsc",
-    "postbuild": "cpy ./package.json ./dist",
+    "postbuild": "cpy ./{package.json,README.md} ./dist",
     "lint": "eslint --ext .ts ./src/** ./tests/**"
   },
   "devDependencies": {
