--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "prebuild": "rimraf ./dist",
     "build": "tsc",
     "postbuild": "cpy ./{package.json,README.md} ./dist",
-    "lint": "eslint --ext .ts ./src/** ./tests/**"
+    "lint": "eslint --ext .ts ./src/** ./tests/**",
+    "generate:config": "ts-node ./scripts/generate-config.ts",
+    "pre-commit": "npm run generate:config && lint-staged",
+    "pre-push": "npm run lint"
   },
   "dependencies": {
     "@typescript-eslint/experimental-utils": "^2.29.0",
@@ -49,6 +52,7 @@
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.0.0",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.3"
   }
 }
