--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-ngrx",
-  "version": "0.0.1-development",
+  "version": "0.0.0-development",
   "description": "ESLint plugin for NgRx",
   "keywords": [
     "NgRx",
@@ -25,7 +25,9 @@
     "prebuild": "rimraf ./dist",
     "build": "tsc",
     "postbuild": "cpy ./{package.json,README.md} ./dist",
-    "lint": "eslint --ext .ts ./src/** ./tests/**"
+    "lint": "eslint --ext .ts ./src/** ./tests/**",
+    "generate:config": "ts-node ./scripts/generate-config.ts",
+    "pre-commit": "npm run generate:config && git add ./src/configs/**.ts && lint-staged"
   },
   "dependencies": {
     "@typescript-eslint/experimental-utils": "^2.29.0",
@@ -49,6 +51,7 @@
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.0.0",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.3"
   }
 }
