--- a/package.json
+++ b/package.json
@@ -36,21 +36,22 @@
   },
   "dependencies": {
     "@angular-devkit/schematics": "^10.0.2",
-    "@typescript-eslint/experimental-utils": "^2.29.0",
+    "@typescript-eslint/experimental-utils": "^3.2.0",
     "eslint-plugin-rxjs": "0.0.2-beta.28",
     "tsutils-etc": "^1.2.2"
   },
   "devDependencies": {
     "@types/common-tags": "^1.8.0",
-    "@types/eslint": "^6.8.1",
+    "@types/eslint": "^7.0.0",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.6",
-    "@typescript-eslint/eslint-plugin": "^3.0.2",
-    "@typescript-eslint/parser": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.0.0",
     "common-tags": "^1.8.0",
     "cpy-cli": "^3.1.1",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-etc": "^2.0.0",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
