--- a/package.json
+++ b/package.json
@@ -35,31 +35,31 @@
     "pre-commit": "npm run generate:config && git add ./src/configs/**.ts && lint-staged"
   },
   "dependencies": {
-    "@angular-devkit/schematics": "^10.0.2",
-    "@typescript-eslint/experimental-utils": "^3.2.0",
-    "eslint-plugin-rxjs": "0.0.2-beta.28",
-    "tsutils-etc": "^1.2.2"
+    "@angular-devkit/schematics": "^11.0.1",
+    "@typescript-eslint/experimental-utils": "^4.7.0",
+    "eslint-plugin-rxjs": "2.1.3",
+    "tsutils-etc": "^1.3.1"
   },
   "devDependencies": {
     "@types/common-tags": "^1.8.0",
-    "@types/eslint": "^7.0.0",
-    "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.6",
-    "@typescript-eslint/eslint-plugin": "^3.1.0",
-    "@typescript-eslint/parser": "^3.0.0",
+    "@types/eslint": "^7.2.4",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.7",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "common-tags": "^1.8.0",
     "cpy-cli": "^3.1.1",
-    "eslint": "^7.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-etc": "^2.0.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "husky": "^4.2.5",
-    "jest": "^26.0.1",
-    "lint-staged": "^10.2.7",
-    "prettier": "^2.0.5",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-etc": "^4.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.3.0",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.0.0",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.3"
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5"
   }
 }
