refactor: enable strict mode

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "suppressImplicitAnyIndexErrors": true,
     "target": "es5",
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "strict": true
   },
   "include": ["./src/**/*.ts"]
 }
