--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,16 @@
 {
   "compilerOptions": {
-    "declaration": true,
-    "importHelpers": true,
-    "lib": ["dom", "es2017"],
+    "strict": true,
+    "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
-    "noEmitHelpers": true,
-    "noImplicitAny": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
     "removeComments": true,
     "skipLibCheck": true,
-    "sourceMap": false,
-    "suppressImplicitAnyIndexErrors": true,
-    "target": "es5",
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "strict": true,
-    "downlevelIteration": true
+    "sourceMap": false
   },
   "include": ["./src/**/*.ts"]
 }
