feat: add ng-add

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test:cov": "jest --coverage",
     "prebuild": "rimraf ./dist",
     "build": "tsc",
-    "postbuild": "cpy ./{package.json,README.md} ./dist",
+    "postbuild": "cpy ./{package.json,README.md} ./dist && npm run copy:schematics",
+    "copy:schematics": "cpy ./schematics/**/*.json ../dist --cwd=src --parents",
     "lint": "eslint --ext .ts ./src/** ./tests/**",
     "g:config": "ts-node ./scripts/generate-config.ts",
     "g:readme": "ts-node ./scripts/generate-readme.ts",
