--- a/package.json
+++ b/package.json
@@ -40,10 +40,17 @@
   "dependencies": {
     "@angular-devkit/schematics": "^11.0.1",
     "@typescript-eslint/experimental-utils": "^4.7.0",
+    "eslint-etc": "^4.0.5",
     "eslint-plugin-rxjs": "^2.1.4",
     "tsutils-etc": "^1.3.1"
   },
+  "peerDependencies": {
+    "eslint": ">=5.0.0",
+    "typescript": ">=3.0.0"
+  },
   "devDependencies": {
+    "@ngrx/effects": "^12.0.0",
+    "@ngrx/store": "^12.0.0",
     "@types/common-tags": "^1.8.0",
     "@types/eslint": "^7.2.4",
     "@types/jest": "^26.0.15",
@@ -54,13 +61,13 @@
     "cpy-cli": "^3.1.1",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
-    "eslint-etc": "^4.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
+    "rxjs": "^7.0.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
