--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "g:config": "ts-node ./scripts/generate-config.ts",
     "g:readme": "ts-node ./scripts/generate-readme.ts",
     "g:all": "npm run g:config && npm run g:readme",
-    "pre-commit": "npm run g:all && git add ./src/configs/**.ts && git add ./README.md && lint-staged"
+    "pre-commit": "npm run g:all && git add ./src/configs/**.ts && git add ./README.md && lint-staged",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@angular-devkit/schematics": "^11.0.1",
@@ -62,7 +63,7 @@
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.3.0",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
