--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,16 +3,15 @@ name: ci
 on:
   push:
     branches:
-      - main
-  pull_request:
-    types: [opened, synchronize, reopened]
+      - 'main'
+  pull_request: {}
 
 jobs:
   build_test_release:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        node-version: [12, 14, 16]
+        node-version: ${{ fromJSON(github.ref == 'refs/heads/main' && '[16]' || '[12,14,16]') }}
+        os: ${{ fromJSON(github.ref == 'refs/heads/main' && '["ubuntu-latest"]' || '["ubuntu-latest", "windows-latest"]') }}
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -27,10 +26,8 @@ jobs:
         run: npm run build
       - name: test
         run: npm run test -- --ci --coverage
-        env:
-          CI: true
       - name: Release
-        if: github.repository == 'timdeschryver/eslint-plugin-ngrx' && github.ref == 'refs/heads/main' && matrix.node-version == 16 && matrix.os == 'ubuntu-latest'
+        if: github.repository == 'timdeschryver/eslint-plugin-ngrx' && github.ref == 'refs/heads/main'
         run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
