--- a/package.json
+++ b/package.json
@@ -18,18 +18,27 @@
   },
   "homepage": "https://github.com/timdeschryver/eslint-plugin-ngrx#readme",
   "private": false,
-  "main": "index.js",
-  "schematics": "./schematics/collection.json",
+  "main": "./dist/index.js",
+  "schematics": "./dist/schematics/collection.json",
   "ng-add": {
     "save": "devDependencies"
   },
+  "ng-update": {
+    "migrations": "./dist/schematics/migrations/migration.json"
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "package.json",
+    "LICENSE"
+  ],
   "scripts": {
     "test": "jest",
     "test:config": "npm run g:config && npm run test",
     "test:cov": "jest --coverage",
     "prebuild": "rimraf ./dist",
     "build": "tsc",
-    "postbuild": "cpy ./{package.json,README.md} ./dist && npm run copy:schematics",
+    "postbuild": "npm run copy:schematics",
     "copy:schematics": "cpy ./schematics/**/*.json ../dist --cwd=src --parents",
     "lint": "eslint ./src/**/*.ts ./tests/**/*.ts",
     "g:config": "ts-node ./scripts/generate-config.ts",
@@ -50,6 +59,7 @@
     "typescript": ">=3.0.0"
   },
   "devDependencies": {
+    "@angular/core": "^12.0.2",
     "@ngrx/effects": "^12.0.0",
     "@ngrx/store": "^12.0.0",
     "@types/common-tags": "^1.8.0",
@@ -68,9 +78,9 @@
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.0.1",
+    "rxjs": "^6.5.3",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "typescript": "~4.2.3"
   }
 }
