--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "devDependencies": {
     "@angular/core": "^12.0.2",
+    "@ngrx/component-store": "^12.1.0",
     "@ngrx/effects": "^12.0.0",
     "@ngrx/store": "^12.0.0",
     "@types/common-tags": "^1.8.0",
@@ -69,7 +70,7 @@
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "common-tags": "^1.8.0",
-    "cpy-cli": "^3.1.1",
+    "cpy-cli": "^1.0.1",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
