--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
 lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
