--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
     "LICENSE"
   ],
   "scripts": {
-    "test": "jest",
+    "test": "uvu -r ts-node/register tests",
     "test:config": "npm run g:config && npm run test",
-    "test:cov": "jest --coverage",
     "prebuild": "rimraf ./dist",
     "build": "tsc",
     "postbuild": "npm run copy:schematics",
@@ -63,8 +62,8 @@
     "@ngrx/store": "^12.4.0",
     "@types/common-tags": "^1.8.1",
     "@types/eslint": "^7.28.0",
-    "@types/jest": "^27.0.1",
     "@types/node": "^14.14.7",
+    "@types/prettier": "^2.3.2",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "common-tags": "^1.8.0",
@@ -73,12 +72,11 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.1",
-    "jest": "^27.0.6",
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.5",
     "ts-node": "^9.0.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "uvu": "^0.5.1"
   }
 }
