--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
   ],
   "scripts": {
     "test": "uvu -r ts-node/register tests",
+    "test:one": "node -r ts-node/register",
     "test:config": "npm run g:config && npm run test",
     "prebuild": "rimraf ./dist",
     "build": "tsc",
     "postbuild": "npm run copy:schematics",
     "copy:schematics": "cpy ./schematics/**/*.json ../dist --cwd=src --parents",
-    "lint": "eslint ./src/**/*.ts ./tests/**/*.ts",
+    "lint:all": "eslint ./src/**/*.ts ./tests/**/*.ts --fix",
+    "prettier:all": "prettier --write .",
     "g:config": "ts-node ./scripts/generate-config.ts",
     "g:readme": "ts-node ./scripts/generate-readme.ts",
     "g:all": "npm run g:config && npm run g:readme",
