--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
+    "prettier-plugin-organize-imports": "^2.3.3",
     "rimraf": "^3.0.2",
     "ts-node": "^9.0.0",
     "typescript": "~4.3.5",
