ci: check if generate has run (#202)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: 🔍 Lint
         run: |
+          npm run g:all
           npm run lint:all
           npm run prettier:all
           git diff --name-only --exit-code
