--- a/internal-rules/tsconfig.json
+++ b/internal-rules/tsconfig.json
@@ -7,11 +7,10 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist",
+    "outDir": "./out",
     "removeComments": true,
     "skipLibCheck": true,
     "sourceMap": false
   },
-  "include": ["./src/**/*.ts"],
-  "exclude": ["./internal-rules/out/*.js"]
+  "include": ["./*.ts"]
 }
