--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "test:config": "npm run g:config && npm run test",
     "prebuild": "rimraf ./dist",
     "build": "tsc",
+    "build:internal-rules": "tsc --project internal-rules/tsconfig.json",
     "postbuild": "npm run copy:schematics",
     "copy:schematics": "cpy ./schematics/**/*.json ../dist --cwd=src --parents",
     "lint:all": "eslint ./scripts/**/*.ts ./src/**/*.ts ./tests/**/*.ts --fix",
@@ -71,6 +72,7 @@
     "common-tags": "^1.8.0",
     "cpy-cli": "^3.1.1",
     "eslint": "^7.32.0",
+    "eslint-plugin-internal-rules": "file:internal-rules",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.1",
