--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -20,7 +20,7 @@ jobs:
       - name: check if prs are dirty
         uses: eps1lon/actions-label-merge-conflict@releases/2.x
         with:
-          dirtyLabel: 'merge-conflict'
+          dirtyLabel: 'conflicts'
           removeOnDirtyLabel: 'Ready to ship'
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           retryAfter: 130
