--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "@angular-devkit/schematics": "^12.2.2",
     "@typescript-eslint/experimental-utils": "^4.31.1",
     "eslint-etc": "^4.2.4",
-    "eslint-plugin-rxjs": "^3.3.6",
-    "tsutils-etc": "^1.3.4"
+    "eslint-plugin-rxjs": "^3.3.6"
   },
   "peerDependencies": {
     "eslint": ">=5.0.0",
