--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   ],
   "scripts": {
     "test": "uvu -r ts-node/register tests",
+    "test:cov": "c8 --check-coverage npm test",
     "test:one": "node -r ts-node/register",
     "test:config": "npm run g:config && npm run test",
     "prebuild": "rimraf ./dist",
@@ -68,11 +69,12 @@
     "@types/prettier": "^2.3.2",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "c8": "^7.9.0",
     "common-tags": "^1.8.0",
     "cpy-cli": "^3.1.1",
     "eslint": "^7.32.0",
-    "eslint-plugin-internal-rules": "file:internal-rules",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-internal-rules": "file:internal-rules",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
