--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "@angular-devkit/schematics": "^12.2.2",
     "@typescript-eslint/experimental-utils": "^4.31.1",
     "eslint-etc": "^4.2.4",
-    "eslint-plugin-rxjs": "^3.3.6"
+    "eslint-plugin-rxjs": "^3.3.6",
+    "semver": "^7.3.5"
   },
   "peerDependencies": {
     "eslint": ">=5.0.0",
@@ -66,6 +67,7 @@
     "@types/eslint": "^7.28.0",
     "@types/node": "^14.14.7",
     "@types/prettier": "^2.3.2",
+    "@types/semver": "^7.3.8",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "c8": "^7.9.0",
