--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "prettier:all": "prettier --write .",
     "g:config": "ts-node ./scripts/generate-config.ts",
     "g:readme": "ts-node ./scripts/generate-readme.ts",
-    "g:all": "npm run g:config && npm run g:readme",
+    "g:docs": "ts-node ./scripts/generate-docs.ts",
+    "g:all": "npm run g:config && npm run g:readme && npm run g:docs",
     "pre-commit": "npm run g:all && git add ./src/configs/**.ts && git add ./README.md && lint-staged",
     "prepare": "husky install"
   },
@@ -53,7 +54,8 @@
     "@angular-devkit/schematics": "^12.2.2",
     "@typescript-eslint/experimental-utils": "^4.31.1",
     "eslint-etc": "^4.2.4",
-    "eslint-plugin-rxjs": "^3.3.6"
+    "eslint-plugin-rxjs": "^3.3.6",
+    "semver": "^7.3.5"
   },
   "peerDependencies": {
     "eslint": ">=5.0.0",
@@ -66,6 +68,7 @@
     "@types/eslint": "^7.28.0",
     "@types/node": "^14.14.7",
     "@types/prettier": "^2.3.2",
+    "@types/semver": "^7.3.8",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "c8": "^7.9.0",
