--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "@angular-devkit/schematics": "^13.0.3",
     "@typescript-eslint/experimental-utils": "^5.4.0",
     "eslint-etc": "^5.1.0",
-    "semver": "^7.3.5"
+    "semver": "^7.3.5",
+    "strip-json-comments": "3.1.1"
   },
   "peerDependencies": {
     "eslint": ">=8.0.0",
